Refactor POS Module
